Add Product List Item

--- a/src/app/components/product-management/product-list/product-list.component.html
+++ b/src/app/components/product-management/product-list/product-list.component.html
@@ -16,30 +16,7 @@
           <th>Selected</th>
           <th colspan="3">Actions</th>
         </tr>
-        <tr *ngFor="let product of result.data">
-          <td>{{product.id}}</td>
-          <td>{{product.name}}</td>
-          <td>{{product.price}}</td>
-          <td>{{product.quantity}}</td>
-          <td>
-            <i class="fa fa-check-circle text-success" *ngIf="product.available"></i>
-            <i class="fa fa-times-circle text-danger" *ngIf="!product.available"></i>
-          </td>
-          <td>
-            <button type="button" [ngClass]="product.selected ? 'btn btn-success' : 'btn btn-danger' " (click)="updateProductSelect(product)">
-              <span *ngIf="!product.selected">Select</span>
-              <span *ngIf="product.selected">UnSelect</span>
-            </button>
-          </td>
-          <td>
-            <button type="button" class="btn btn-danger" (click)="deleteProduct(product.id)">
-              <span class="fa fa-trash"></span>
-            </button>
-            <button type="button" class="btn btn-warning ml-2" (click)="updateProduct(product.id)">
-              <span class="fa fa-edit"></span>
-            </button>
-          </td>
-        </tr>
+        <app-product-item (productEventEmitter)="onEvent($event)"  [product]="product" *ngFor="let product of result.data" style="display: contents;"></app-product-item>
       </table>
     </div>
     <div class="container" *ngSwitchCase="DataStateEnum.ERROR">
