--- a/src/app/components/product-management/products/products.component.html
+++ b/src/app/components/product-management/products/products.component.html
@@ -1,2 +1,2 @@
-<app-products-nav-bar (eventEmitter)="onEvent($event)"></app-products-nav-bar>
-<app-product-list [productList$]="productList$" (productEventEmitter)="onEvent($event)"></app-product-list>
+<app-products-nav-bar></app-products-nav-bar>
+<app-product-list [productList$]="productList$"></app-product-list>
