Add Actions Count

--- a/src/app/components/nav-bar/nav-bar.component.html
+++ b/src/app/components/nav-bar/nav-bar.component.html
@@ -21,4 +21,11 @@
       </div>
     </li>
   </ul>
+
+  <ul class="navbar-nav ml-auto">
+    <li class="nav-item">
+      <app-app-stats></app-app-stats>
+    </li>
+  </ul>
+
 </nav>
